added predictive distribution

--- a/ard_rvm_demo.ipynb
+++ b/ard_rvm_demo.ipynb
@@ -27,10 +27,16 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Automatic Relevance Determination is very similar to Bayesian Regression with evidence approximation and Normal prior on weights. The only difference is that in ARD framework prior distribution does not have single precision shared by all parameters (except bias term), instead each parameter is initially assigned its own varince. In the process of type II maximum likelihood maximization variance for some parameters comes close to zero, so after several iterations those parameters can be discarded, since they have zero mean and almost zero variance in prior distribution.\n",
-      "There are three different methods for fitting ARD regression, first two of them fixed-point and expectation maximization were proposed \n",
-      "by Tipping in his original paper, third one was discovered year later. In current version of code only fixed-point and EM algorithms are implemented, in general EM is a little slower so by default model is fitted with fixed-point algorithm.\n",
-      "One of the main drawbacks of ARD is that this is not convex optimization problem therefore there is chance of ending up in local maximum, so it may be a good idea to rerun algorithm couple of times."
+      "      Automatic Relevance Determination is very similar to Bayesian Regression with evidence approximation and Normal prior on weights.   \n",
+      "      The only difference is that in ARD framework prior distribution does not have single precision shared by all parameters (except\n",
+      "      bias term), instead each parameter is initially assigned its own varince. In the process of type II maximum likelihood   \n",
+      "      maximization variance for some parameters comes close to zero, so after several iterations those parameters can be discarded, \n",
+      "      since they have zero mean and almost zero variance in prior distribution.\n",
+      "      There are three different methods for fitting ARD regression, first two of them fixed-point and expectation maximization were\n",
+      "      proposed by Tipping in his original paper, third one was discovered year later. In current version of code only fixed-point and EM \n",
+      "      algorithms are implemented, in general EM is a little slower so by default model is fitted with fixed-point algorithm.\n",
+      "      One of the main drawbacks of ARD is that this is not convex optimization problem therefore there is chance of ending up in local   \n",
+      "      maximum, so it may be a good idea to rerun algorithm couple of times."
      ]
     },
     {
@@ -45,8 +51,9 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Below is example of using ARD regression, in this example only one variable out of 100 is relevant. Plots show ARD correctly identified \n",
-      "single relevant feature (single blue point above red line), you can also see that both EM and fixed-point algorithms had similar results. "
+      "      Below is example of using ARD regression, in this example only one variable out of 100 is relevant. Plots show ARD correctly \n",
+      "      identified single relevant feature (single blue point above red line), you can also see that both EM and fixed-point algorithms \n",
+      "      had similar results. "
      ]
     },
     {
@@ -123,7 +130,8 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "Problem with variable selection with ARD is that user needs to determine threshold for parameter variance, and model sparsity is directly determined by this threshold. Plot below shows that relationship."
+      "      Problem with variable selection with ARD is that user needs to determine threshold for parameter variance, and model sparsity is    \n",
+      "      directly determined by this threshold. Plot below shows that relationship."
      ]
     },
     {
@@ -167,6 +175,13 @@
      "metadata": {},
      "source": [
       "Predictions"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "      After fitting model we can construct predictive distribution"
      ]
     },
     {
