--- a/ard_rvm_demo.ipynb
+++ b/ard_rvm_demo.ipynb
@@ -35,7 +35,7 @@
       "      There are three different methods for fitting ARD regression, first two of them fixed-point and expectation maximization were\n",
       "      proposed by Tipping in his original paper, third one was discovered year later. In current version of code only fixed-point and EM \n",
       "      algorithms are implemented, in general EM is a little slower so by default model is fitted with fixed-point algorithm.\n",
-      "      One of the main drawbacks of ARD is that this is not convex optimization problem therefore there is chance of ending up in local   \n",
+      "      One of the main drawbacks of ARD is that it is non convex optimization problem therefore there is chance of ending up in local   \n",
       "      maximum, so it may be a good idea to rerun algorithm couple of times."
      ]
     },
@@ -132,9 +132,9 @@
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "      Problem with variable selection with ARD is that user needs to determine threshold for parameter variance, and model sparsity is    \n",
-      "      directly determined by this threshold. Plot below shows that relationship. You can also see that EM and fixed-point fitting    \n",
-      "      algorithms give almost similar results. "
+      "      Problem with variable selection with ARD framework is that user needs to determine threshold for parameter variance, and model  \n",
+      "      sparsity is directly determined by this threshold. Plot below shows that relationship. You can also see that EM and fixed-point  \n",
+      "      fitting algorithms give almost similar results. "
      ]
     },
     {
