credits for example

--- a/Bayesian Linear Regression/bayesian_regression_demo.ipynb
+++ b/Bayesian Linear Regression/bayesian_regression_demo.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e1943fbd97f6cad82e3ab8b626894e59ab3c745add40c5abd86e8c6f6b43af69"
+  "signature": "sha256:5b2ec745cdf0fe6fc4ca78e40f1f97bd638fef4b4975904746ae4c9e90c4c2df"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -401,7 +401,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Eigenvalues of precision matrix are positive, hence it is invertible and therefor covariance matrix is also well determined."
+      "Eigenvalues of precision matrix are positive, hence it is invertible and therefor covariance matrix is also well determined.\n",
+      "(Thanks to Sergey Feldman for example & finding important error in code)"
      ]
     }
    ],
