language statistics fix

--- a/Fast Relevance Vector Machine/tutorial_rvm.ipynb
+++ b/Fast Relevance Vector Machine/tutorial_rvm.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# vim: set filetype=python:"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
