--- a/ipython_notebooks_tutorials/mixture_models/example_gaussian_mixture_with_ard.ipynb
+++ b/ipython_notebooks_tutorials/mixture_models/example_gaussian_mixture_with_ard.ipynb
@@ -41,7 +41,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Clustering with Bayesian GMM with Automatic Model Selection"
+      "Bayesian GMM with Automatic Model Selection"
      ]
     },
     {
