fix in gauss mixture

--- a/ipython_notebooks_tutorials/mixture_models/example_gaussian_mixture_with_ard.ipynb
+++ b/ipython_notebooks_tutorials/mixture_models/example_gaussian_mixture_with_ard.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.9"
   },
   "name": "",
-  "signature": "sha256:b8da55aa486aef75223d6231985c0e0ad8bf1f0acfb614cf5b6d33a45ea6a1c3"
+  "signature": "sha256:8ba43f6894716f4d87fb4842b18bd4f1828db069b6798b3a581c6cd5bbae86f1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -50,12 +50,9 @@
      "source": [
       "In this notebook we demonstrate use of Variational Bayesian GMM with automatic model selection. Model that we use is not fully Bayesian, mixing probabilities are considered to be parameters not random variables, so we use VBEM to fit the model. VBEM algorithm consists of two steps: E step and M step.\n",
       "\n",
-      "   E step : approximate posterior of all random variables    \n",
-      "   (including latent variable) using Variational Bayes and evaluate\n",
-      "   lower bound. \n",
+      "   E step : approximate posterior of all random variables (including latent variable) using Variational Bayes and evaluate lower bound. \n",
       "   \n",
-      "   M step : maximize lower bound with respect to mixing  \n",
-      "   probabilities.\n",
+      "   M step : maximize lower bound with respect to mixing probabilities.\n",
       "           \n",
       "In the process of iterations some weights are driven to zero and are pruned if they achieve threshold level (by default 1e-5). So this algorithm uses the same Automatic Relevance Determination technique that was used by Tipping in first version of RVM.\n",
       "It is also worth noting that in original paper authors used only one iteration of Variational Bayes in E step in order to speed up algorithm. There is obvious trade off between accuracy of approximation (this requires more iterations of VB in E step) and speed and sometimes it might be better to allow more iterations to improve perfomance \n",
